# rules_web_ext

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  commitlint.config.js  index.bzl  package.bzl  package.json
.github/workflows/: default.yaml
docs/: BUILD.bazel
internal/: BUILD.bazel  repositories.bzl
internal/web_ext/: BUILD.bazel  artifact.js  crx.js  crx3.pb.js  crx3.proto  package.json  web_ext.bzl  zip.js
internal/web_ext/test/: BUILD.bazel  README.md  ecdsa.pem  rsa.pem  web_ext.spec.js
